--- a/upcomming.css
+++ b/upcomming.css
@@ -60,19 +60,7 @@ body {
     margin: 5px;
 }
 
-/* blog-section style */
-.main-container {
-    width: 1000px;
-    height: 1000px;
-
-}
-
-.menu-blog {
-    display: flex;
-    justify-content: flex-start;
-    margin-top: 20px;
-    gap: 5px;
-}
+/* upcomming match */
 
 .menu-bar {
     width: 267px;
@@ -98,50 +86,60 @@ body {
     border-radius: 10px;
 }
 
-.blog-menu {
+
+.menu-blog {
+    display: flex;
+    gap: 80px;
+}
+
+.upcomming-macth {
     background-color: #DD0000;
     color: #FFFFFF;
 }
 
-.blog-title {
-    width: 100px;
-    height: 20px;
-    text-align: center;
-    border: 1px solid #161616;
-    border-radius: 7px;
-    padding: 5px 10px;
-    margin: 10px 10px;
-}
-
-.blog-write {
-    font-size: 18px;
-    font-weight: 600;
-    padding: 5px 10px;
-}
-
-.players {
-    width: 100%;
+.container-2 {
+    width: 298px;
+    height: 231px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 24px;
-    transform: scale(0.8);
-    margin-top: -35px;
+    gap: 10px;
+    margin: 67px 15px;
 }
 
-.player {
-    margin: 10px 5px;
-    background-color: #e8e8e862;
+.matches {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #e8e8e8;
+    border-radius: 10px;
 }
 
-.fa-regular {
-    margin: 5px;
+.match {
+    display: flex;
+    gap: 15px;
+    padding: 50px 20px;
 }
 
-/* footer style */
+.vs {
+    text-align: center;
+    padding: 10px;
+    margin: 15px 0px;
+}
+
+.match-title {
+    margin: -30px 20px;
+}
+
+.match-date {
+    font-size: 13px;
+    color: #4D4D4D;
+    margin: 50px 20px;
+}
+
 .footer-info {
     background-color: #161616;
     width: 100%;
     height: 500px;
+    margin-top: 300px;
 }
 
 .footer-title {
