--- a/style.css
+++ b/style.css
@@ -28,20 +28,21 @@ body {
 
 .blog-info {
     display: flex;
-    /* align-items: center; */
+    width: 100%;
+    height: 100%;
 }
 
 .blog-info p {
     color: #FFFFFF;
+    width: 75%;
     font-size: 15px;
     padding: 0 50px;
 }
 
 .banner-img {
-    width: 100%;
     padding: 35px 5px;
     margin-top: 20px;
-    transform: scale(1.2);
+    transform: scale(1.0);
 }
 
 .btns {
@@ -176,4 +177,116 @@ body {
     color: white;
     gap: 20px;
     font-size: 25px;
+}
+
+/* mobile device */
+
+@media only screen and (max-width:688px) {
+    .container {
+        height: 100%;
+        transform: scale(1.1);
+        margin-left: 120px;
+    }
+
+    .container-title {
+        width: 100%;
+        text-align: center;
+        padding-left: 15px;
+    }
+
+    .banner-img {
+        width: 100%;
+        position: relative;
+        left: 400px;
+        top: 20px;
+    }
+
+    .blog-info p {
+        width: 100%;
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .blog-info {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .btns {
+        position: relative;
+        left: 400px;
+        top: 20px;
+    }
+
+    .menu-bar {
+        position: relative;
+        left: 400px;
+        background-color: white;
+    }
+
+    .menu {
+        width: 100%;
+        transform: scale(1.3);
+    }
+
+
+    .players {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        position: relative;
+        top: 440px;
+        width: 100%;
+        transform: scale(1.0);
+    }
+
+
+
+    .footer-info {
+        position: relative;
+        top: 2500px;
+        left: 400px;
+        width: 100%;
+    }
+
+    .about-info {
+        flex-direction: column;
+        margin: 150px 50px;
+
+
+    }
+}
+
+/* tablet-device */
+@media only screen and (min-width:687px) and (max-width:987px) {
+    .container {
+        transform: scale(1.0);
+        height: 100%;
+    }
+
+    .menu-bar {
+        display: flex;
+        gap: 50px;
+        width: 75%;
+        height: 50%;
+    }
+
+    .menu-blog {
+        flex-direction: column;
+    }
+
+    .players {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        position: relative;
+        top: 200px;
+        width: 100%;
+        transform: scale(1.0);
+    }
+
+
+    .footer-info {
+        position: relative;
+        top: 1200px;
+        width: 1200px;
+    }
 }
