--- a/upcomming.css
+++ b/upcomming.css
@@ -175,3 +175,79 @@ body {
     gap: 20px;
     font-size: 25px;
 }
+
+/* mobile device */
+
+@media only screen and (max-width:688px) {
+    .container {
+        height: 100%;
+        transform: scale(1.1);
+        margin-left: 120px;
+    }
+
+    .container-title {
+        width: 100%;
+        text-align: center;
+        padding-left: 15px;
+    }
+
+    .banner-img {
+        width: 100%;
+        position: relative;
+        left: 400px;
+        top: 20px;
+        transform: scale(1.0);
+    }
+
+    .blog-info p {
+        width: 100%;
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .blog-info {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .btns {
+        position: relative;
+        left: 400px;
+        top: 20px;
+    }
+
+    .menu-bar {
+        position: relative;
+        left: 400px;
+        background-color: white;
+    }
+
+    .menu {
+        width: 100%;
+        transform: scale(1.3);
+    }
+
+
+    .matches {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        position: relative;
+        top: 440px;
+        width: 100%;
+        transform: scale(1.0);
+    }
+
+    .footer-info {
+        position: relative;
+        top: 500px;
+        left: 250px;
+        width: 700px;
+    }
+
+    .about-info {
+        flex-direction: column;
+        margin: 150px 50px;
+
+
+    }
+}
